Tue Jan 27 23:00:47 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_ts.pl:

          Changed how the input idl file is #included by the generated idl
          file so that all generated files can be kept in a spearate
          directory from the source files.  If the source file is in a
          subdirectory "src" then -Isrc needs to be passed to tao_idl when
          it compiles the generated idl file.  Thanks to Brad Howes
          <howes at ll dot mit dot edu> for his mailing list post that
          motivated this change.

Tue Jan 27 22:29:55 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Compiler/idl_test3_lib/FooDef.idl:

          Reverted Fri Jan 23 17:05:16 UTC 2009  Adam Mitz  <mitza@ociweb.com>
          because the tao_idl compiler in the DOC repository has been fixed.

Tue Jan 27 00:18:06 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/Federator.idl:
        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:

          Added the 'publication_transport_priority' attribute to the
          PublicationUpdate structure explicitly since it does not nest
          the actual data type.

Mon Jan 26 23:12:03 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tests/transport/dds_comparative/Pub.h:
        * tests/transport/dds_comparative/Sub.h:
        * tests/transport/mcast_simple/PubDriver.cpp:
        * tests/transport/mcast_simple/SubDriver.cpp:
        * tests/transport/mcast_simple_n/PubDriver.cpp:
        * tests/transport/mcast_simple_n/SubDriver.cpp:
        * tests/transport/simple/PubDriver.cpp:
        * tests/transport/simple/SubDriver.cpp:
        * tests/transport/simple_bp_rm/PubDriver.cpp:
        * tests/transport/simple_bp_rm/SubDriver.cpp:
        * tests/transport/simple_n/PubDriver.cpp:
        * tests/transport/simple_n/SubDriver.cpp:
        * tests/transport/udp_simple/PubDriver.cpp:
        * tests/transport/udp_simple/SubDriver.cpp: